# gosync

./: .coverage  .coveragerc  .env.template  .envrc  .gitignore  README.md  main.py  manage.py  pyproject.toml  pytest.ini  todo.md
api/: admin.py  apps.py  exceptions.py  middleware.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_remove_task_api_task_client__955444_idx_and_more.py  0002_user_created_by_user_tenant_alter_user_role.py  0003_rename_comment_taskcomment_content_and_more.py  0003_task.py  0004_alter_user_organization.py  0004_taskcomment.py  0005_alter_project_unique_together_and_more.py  0006_alter_task_unique_together_and_more.py
api/tests/: conftest.py  test_model.py  test_tenant_isolation.py  test_user_and_tenant_constraints.py  test_views.py
gosync/: asgi.py  settings.py  urls.py  wsgi.py
